swagger basepath option for deployment and testing
