# backend/app.py
@@ -13,30 +13,30 @@ def set_sqlite_pragma(dbapi_connection, connection_record):
     cursor.close()
 
 
-def create_app(testing=False) -> Flask:
+def create_app(testing=True) -> Flask:
+    deployment_path = '/'
     app = Flask(__name__)
     CORS(app)
-
-    setup_swagger(app)
-
     if testing:
         app.config['TESTING'] = True
         app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///:memory:'
+        deployment_path = '/api/'
     else:
         app.config['SQLALCHEMY_DATABASE_URI'] = 'sqlite:///database.db'
+    setup_swagger(app, deployment_path)
 
     app.config['SQLALCHEMY_TRACK_MODIFICATIONS'] = False
 
     db.init_app(app)
 
     from backend.api.device_api import device_api
-    app.register_blueprint(device_api, url_prefix='/devices')
+    app.register_blueprint(device_api, url_prefix=f'{deployment_path}/devices')
 
     from backend.api.user_api import user_api
-    app.register_blueprint(user_api, url_prefix='/users')
+    app.register_blueprint(user_api, url_prefix=f'{deployment_path}/users')
 
     from backend.api.event_api import event_api
-    app.register_blueprint(event_api, url_prefix='/events')
+    app.register_blueprint(event_api, url_prefix=f'{deployment_path}/events')
 
     with app.app_context():
         db.create_all()
